--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,7 @@ comm==0.2.1
 dataclasses-json==0.6.4
 debugpy==1.8.1
 decorator==5.1.1
-deepgram-sdk==3.1.4
+deepgram-sdk==3.*
 distro==1.9.0
 executing==2.0.1
 frozenlist==1.4.1
@@ -35,7 +35,7 @@ langchain==0.1.9
 langchain-community==0.0.24
 langchain-core==0.1.26
 langchain-groq==0.0.1
-langchain-openai==0.0.7
+langchain-openai==0.*
 langsmith==0.1.6
 marshmallow==3.20.2
 matplotlib-inline==0.1.6
@@ -73,7 +73,7 @@ sounddevice==0.4.6
 SQLAlchemy==2.0.27
 stack-data==0.6.3
 tenacity==8.2.3
-tiktoken==0.3.1
+tiktoken==0.*
 tornado==6.4
 tqdm==4.66.2
 traitlets==5.14.1
