--- a/requirements.txt
+++ b/requirements.txt
@@ -84,7 +84,7 @@ verboselogs==1.7
 wcwidth==0.2.13
 websocket==0.2.1
 websocket-client==1.7.0
-websockets>=10.4,<11.0
+websockets==12.*
 yarl==1.9.4
 zope.event==5.0
 zope.interface==6.2
